v1.4 release