@@ -22,7 +22,7 @@
  *     Tel: +30-2810-391632
  *     Fax: +30-2810-391638
  *  E-mail: isl@ics.forth.gr
- * WebSite: http://www.ics.forth.gr/isl/cci.html
+ * WebSite: https://www.ics.forth.gr/isl/centre-cultural-informatics
  * 
  * =============================================================================
  * Authors: 
@@ -57,7 +57,7 @@ public class SVGOBJ extends Object {
     fill        = new String("#E9E9C6");
     stroke      = new String("brown");
     fontfamily  = SVGFont.getFamily();
-    fontsize    = new Integer(SVGFont.getSize()).toString(); // new String(SVGFont.getSize());
+    fontsize    = Integer.valueOf(SVGFont.getSize()).toString(); // new String(SVGFont.getSize());
     textfill    = new String("black");
     text        = new String(TEXT);
     url         = new String(URLL);
