@@ -22,7 +22,7 @@
  *     Tel: +30-2810-391632
  *     Fax: +30-2810-391638
  *  E-mail: isl@ics.forth.gr
- * WebSite: http://www.ics.forth.gr/isl/cci.html
+ * WebSite: https://www.ics.forth.gr/isl/centre-cultural-informatics
  * 
  * =============================================================================
  * Authors: 
@@ -97,7 +97,7 @@ public class SearchResults_Users extends ApplicationBasicServlet {
 
             // -------------------- paging info And criteria retrieval-------------------------- 
             //initial values --> will change from the following code
-            int usersPagingListStep = new Integer(ListStepStr).intValue();
+            int usersPagingListStep = Integer.valueOf(ListStepStr).intValue();
             int usersPagingFirst = 1;
             int usersPagingQueryResultsCount = 0;
 
